More mobile improvements.  - Breadcrumbs should now wrap correctly on small devices.  - Updated some interface elements that still referred to labels.  - Staff area is now fully responsive.  - Model lists should now be horizontally scrollable if they are too large for your devices screen. This is particularly useful for mobile devices, where you can now drag around to view the full table.  - Reduced some padding on wrappers for mobile devices.  - Bumped the total number of messages per page. This was previously reduced to 6 whilst testing, and was never increased again.  - Added a better hint to the file upload form.

--- a/app/assets/stylesheets/components/staff/_breadcrumbs.scss
+++ b/app/assets/stylesheets/components/staff/_breadcrumbs.scss
@@ -3,6 +3,7 @@
 
   ul {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     list-style-type: none;
     padding: 0;
@@ -21,5 +22,6 @@
   a {
     text-decoration: none;
     color: darken($grey, 20%);
+    line-height: 1.8;
   }
 }
